--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^4.11.7",
     "pug": "^2.0.0-rc.3",
     "request-counter": "0.0.1",
+    "sprintf-js": "^1.1.1",
     "telegraf": "^3.9.0",
     "tracer": "^0.8.9"
   },
