--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.2",
     "config": "^1.26.2",
     "express": "^4.15.4",
+    "express-basic-auth": "^1.1.3",
     "mongoose": "^4.11.7",
     "pug": "^2.0.0-rc.3",
     "request-counter": "0.0.1",
