--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "pug": "^2.0.0-rc.3",
     "request-counter": "0.0.1",
     "telegraf": "^3.17.3",
-    "tracer": "^0.8.9"
+    "tracer": "^0.8.9",
+    "viber-bot": "^1.0.13",
+    "winston": "2.3.0",
+    "winston-console-formatter": "0.3.1"
   },
   "devDependencies": {
     "jasmine": "^2.8.0",
