--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "telegram-alert",
-  "version": "0.0.1",
+  "name": "alarmo",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index",
     "test": "standard && jasmine"
+  },
+  "bin": {
+    "alarmo": "./index.js"
   },
   "repository": {
     "type": "git",
