--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "test": "standard && jasmine"
+    "build": "tsc",
+    "test": "jasmine"
   },
   "bin": {
     "alarmo": "./index.js"
@@ -31,13 +31,13 @@
     "request-counter": "0.0.1",
     "telegraf": "^3.17.3",
     "tracer": "^0.8.9",
+    "tslint": "^5.12.0",
     "viber-bot": "^1.0.13",
     "winston": "2.3.0",
     "winston-console-formatter": "0.3.1"
   },
   "devDependencies": {
     "jasmine": "^2.8.0",
-    "request": "^2.88.0",
-    "standard": "^11.0.1"
+    "request": "^2.88.0"
   }
 }
