--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jasmine"
+    "test": "tsc && jasmine"
   },
   "bin": {
     "alarmo": "./index.js"
