--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
   },
   "homepage": "https://github.com/antirek/alarmo#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "@types/node": "^14.0.1",
+    "body-parser": "^1.19.0",
     "config": "^1.26.2",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "https-proxy-agent": "^2.2.4",
-    "mongoose": "^5.8.3",
-    "pug": "^2.0.0-rc.3",
+    "mongoose": "^5.9.14",
+    "pug": "^2.0.4",
     "request-counter": "0.0.1",
-    "telegraf": "^3.17.3",
+    "telegraf": "^3.38.0",
     "tracer": "^0.8.9",
-    "tslint": "^5.12.0",
-    "viber-bot": "^1.0.13",
+    "tslint": "^5.20.1",
+    "viber-bot": "^1.0.16",
     "winston": "2.3.0",
     "winston-console-formatter": "0.3.1"
   },
   "devDependencies": {
     "jasmine": "^2.8.0",
-    "request": "^2.88.0",
-    "typescript": "^3.2.2"
+    "request": "^2.88.2",
+    "typescript": "^3.9.2"
   }
 }
